--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-		<link rel="stylesheet" href="/css/styles.css">
+		<link rel="stylesheet" href="./css/styles.css">
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Ferblanterie</title>
 		<h1>By Lukas Alutalu</h1>
 </head>
 <body>
-	<script src="js/index.js">
+	<script src="./js/index.js">
 </script>
 </body>
 </html>
