--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Ferblanterie</title>
-		<h1>By Lukas Alutalu</h1>
 </head>
 <body>
+		<a href="about.html">About</a>
+		<p>Currently year one apprentice in Ferblanterie</p>
 	<script src="./js/index.js">
 </script>
 </body>
